# kern

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: cert.pem  fileserver.rs  fileserver_tls.rs  key.pem
src/: byte.rs  cli.rs  conf.rs  data.rs  error.rs  file.rs  lib.rs  meta.rs  net.rs  rand.rs  string.rs
src/http/: mod.rs
src/http/client/: client.rs  mod.rs  request.rs  response.rs  url.rs
src/http/common/: mod.rs
src/http/server/: builder.rs  conn.rs  listener.rs  mod.rs  request.rs  response.rs  server.rs  settings.rs  tls.rs  unsecure.rs
tests/: byte.rs  cli.rs  conf.rs  error.rs  file.rs  kern.rs  meta.rs  net.rs  rand.rs  string.rs
