[package]
name = "kern"
version = "1.7.1"
authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
edition = "2021"
license = "ISC"
repository = "https://ltheinrich.de/kern"
description = "General library for Rust"
readme = "README.md"
documentation = "https://docs.rs/kern"

[dependencies]
rustls = { version = "0.23.20", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
rustls-pki-types = { version = "1.10.1", optional = true, features = ["alloc"] }
webpki-roots = { version = "0.26.7", optional = true }

[features]
default = []
tls = ["rustls", "rustls-pemfile", "rustls-pki-types", "webpki-roots"]

[[example]]
name = "fileserver"
required-features = ["tls"]
